# rte-sonar-report

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-test.yml  release-to-pypi.yml
rte_sonar_reports/: __main__.py  app.py  application_description_schema.yml  loaders.py  pdf.py  prescription_validator.py  sonar.py
tests/: application_description_example.yml  generate_report_example_for_readme.py  sonar_config_example.ini  test_application.py  test_application_loading.py  test_module.py  test_prescription_status_calculation.py  test_sonar.py
